--- a/src/AppMvcNHibernate/AppMvcNHibernate.csproj
+++ b/src/AppMvcNHibernate/AppMvcNHibernate.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.14" />
+    <PackageReference Include="NHibernate" Version="5.3.12" />
+  </ItemGroup>
+
 </Project>
